--- a/.github/ISSUE_TEMPLATE/environment.yml
+++ b/.github/ISSUE_TEMPLATE/environment.yml
@@ -4,19 +4,19 @@ labels: "\U0001F30F Environment"
 body:
   - type: textarea
     attributes:
-      label: 🤔 Describe
+      label: Describe 🤔
       description: 현재 어떤 상황인지 설명해 주세요.
       placeholder: 자세히 적을수록 좋습니다!
     validations:
       required: true
   - type: textarea
     attributes:
-      label: ✅ Tasks
+      label: Tasks ✅
       description: 추가할 환경 설정에 대해 간략히 기록해 주세요.
       placeholder: 최대한 세분화 해서 적어주세요!
     validations:
       required: true
   - type: textarea
     attributes:
-      label: 🙋🏻 More
+      label: More 🙋🏻
       description: 더 하고 싶은 말이 있다면 작성해 주세요.
