--- a/.github/ISSUE_TEMPLATE/refactor.yml
+++ b/.github/ISSUE_TEMPLATE/refactor.yml
@@ -4,19 +4,19 @@ labels: "\U0001F528 Refactor"
 body:
   - type: textarea
     attributes:
-      label: 🔨 Describe
+      label: Describe 🔨
       description: 왜 리팩터링을 해야하는지 설명해주세요!
       placeholder: 자세히 적을수록 좋습니다!
     validations:
       required: true
   - type: textarea
     attributes:
-      label: ✅ Tasks
+      label: Tasks ✅
       description: 리팩터링을 할 부분에 대해서 자세히 작성해 주세요.
       placeholder: 최대한 세분화 해서 적어주세요!
     validations:
       required: true
   - type: textarea
     attributes:
-      label: 🙋🏻 More
+      label: More 🙋🏻
       description: 더 하고 싶은 말이 있다면 작성해 주세요.
