--- a/.github/ISSUE_TEMPLATE/environment.yml
+++ b/.github/ISSUE_TEMPLATE/environment.yml
@@ -1,6 +1,6 @@
-name: "\U0001F30F Environment"
+name: "Environment \U0001F30F"
 description: "추가적인 환경설정이 필요한가요?"
-labels: "\U0001F30F Environment"
+labels: "Environment \U0001F30F"
 body:
   - type: textarea
     attributes:
