feat: Add overtime report Excel download functionality
- Add OverTimeReportService for generating Excel reports with Apache POI
- Add OverTimeReportData record for structured report data
- Extend OverTimeController with Excel download endpoint (/overtime/report/excel)
- Implement proper Excel formatting with time formatting, currency formatting, and totals
- Add comprehensive test coverage for both service and controller layers
- Enhance GlobalExceptionHandler with missing parameter and type mismatch handling
- Add Apache POI dependencies to build.gradle
- All tests passing with MockMvcTester integration

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ dependencies {
 	// for BCryptPasswordEncoder
 	implementation 'org.springframework.security:spring-security-core'
 
+	// Apache POI for Excel file generation
+	implementation 'org.apache.poi:poi:5.2.4'
+	implementation 'org.apache.poi:poi-ooxml:5.2.4'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
