Separate Configuration by environment and secure API keys
- Create application.yml, application-dev.yml, application-prod.yml
- Add .env file support with spring.config.import
- Move sensitive API keys from hardcoded values to environment variables
- Add .env.example as template for required environment variables
- Update .gitignore to exclude .env file from version control
- Enable flexible API testing without exposing secrets in repository

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ src/main/resources/static/docs/
 ### Ignore .DS_Store ###
 **/.DS_Store
 
-### application*.yml ###
-src/main/resources/*.yml
+# Environment files
+.env
+
+# 로컬에서 테스트하는 application.yml
 src/test/resources/*.yml
+
+# Log files
+logs/
