Add database fallback for holiday API with prefetch
- Cache holiday data in database when API succeeds
- Fall back to cached data when API fails or returns null
- Prefetch next month holidays after overtime report generation
- Add Holiday entity and HolidayRepository
- Add comprehensive integration tests for fallback scenarios
- Improve concurrency test by removing hard-coded IDs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,9 +15,9 @@ spring:
     defer-datasource-initialization: true
   
   # SQL 초기화 설정
-  sql:
-    init:
-      data-locations: classpath:data.sql
+#  sql:
+#    init:
+#      data-locations: classpath:data.sql
 
   # Jackson 공통 설정
   jackson:
